Mar 23, 2020
  parser: added handling of 'Karyotypic information' and ORDO xdb ids

Feb 28, 2020
  fixed typo in assoc types

Feb 27, 2020
  added loading of Cellosaurus xdb ids

Feb 26, 2020
  implemented loading of associations
  implemented loading of xdb ids

Feb 24, 2020
  finished cell lines loading: inserts, deletes and updates
  implemented loading of aliases

Feb 21, 2020
  finished parsing code
  implemented cell lines qc: insertions and deletions

Jan 29, 2020
  implemented parsing of Cell Line symbol, name, type and sex
  implemented rudimentary qc and loading code for Cell Line objects

Jan 28, 2020
  implemented rudimentary parsing of cellosaurus.obo file