@@ -39,24 +39,33 @@ log4j.appender.annot.Append=true
 
 log4j.appender.annot_summary=org.apache.log4j.FileAppender
 log4j.appender.annot_summary.Threshold=INFO
-log4j.appender.annot_summary.File=logs/annot_summary.log
+log4j.appender.annot_summary.File=logs/annotSummary.log
 log4j.appender.annot_summary.layout=org.apache.log4j.PatternLayout
 log4j.appender.annot_summary.layout.ConversionPattern=%m%n
 log4j.appender.annot_summary.Append=false
 
-log4j.logger.annot_inserted=DEBUG, annot_inserted
+log4j.logger.annotInserted=DEBUG, annot_inserted
 log4j.appender.annot_inserted=org.apache.log4j.DailyRollingFileAppender
 log4j.appender.annot_inserted.Threshold=DEBUG
-log4j.appender.annot_inserted.File=logs/annot_inserted.log
+log4j.appender.annot_inserted.File=logs/annotInserted.log
 log4j.appender.annot_inserted.layout=org.apache.log4j.PatternLayout
 log4j.appender.annot_inserted.layout.ConversionPattern=%d %p [%c] - %m%n
 log4j.appender.annot_inserted.DatePattern='.'yyyy-MM
 log4j.appender.annot_inserted.Append=true
 
-log4j.logger.annot_deleted=DEBUG, annot_deleted
+log4j.logger.annotUpdated=DEBUG, annot_updated
+log4j.appender.annot_updated=org.apache.log4j.DailyRollingFileAppender
+log4j.appender.annot_updated.Threshold=DEBUG
+log4j.appender.annot_updated.File=logs/annotUpdated.log
+log4j.appender.annot_updated.layout=org.apache.log4j.PatternLayout
+log4j.appender.annot_updated.layout.ConversionPattern=%d %p [%c] - %m%n
+log4j.appender.annot_updated.DatePattern='.'yyyy-MM
+log4j.appender.annot_updated.Append=true
+
+log4j.logger.annotDeleted=DEBUG, annot_deleted
 log4j.appender.annot_deleted=org.apache.log4j.DailyRollingFileAppender
 log4j.appender.annot_deleted.Threshold=DEBUG
-log4j.appender.annot_deleted.File=logs/annot_deleted.log
+log4j.appender.annot_deleted.File=logs/annotDeleted.log
 log4j.appender.annot_deleted.layout=org.apache.log4j.PatternLayout
 log4j.appender.annot_deleted.layout.ConversionPattern=%d %p [%c] - %m%n
 log4j.appender.annot_deleted.DatePattern='.'yyyy-MM
